more particles = more cool

--- a/index.html
+++ b/index.html
@@ -505,7 +505,8 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
         </section>
 
         <!-- Schedule -->
-        <section class="slide slide-free container-fluid changeable" id="schedule" style="padding-left: 0">
+        <section class="slide slide-free container-fluid changeable" id="schedule"
+                 style="padding-left: 0; padding-bottom: 0px !important;">
 
 
             <h3>Schedule</h3>
@@ -750,7 +751,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
     particlesJS("particles-js", {
         "particles": {
             "number": {
-                "value": 80,
+                "value": 200,
                 "density": {
                     "enable": true,
                     "value_area": 800
