--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
                         </p>
                         <br>
 
-                        <a href="https://masseyhacks5.devpost.com">
+                        <a href="https://forms.gle/enZQTK2gXRGJc5xf9/">
                             <button class="btn-white btn-large" type="button">Register</button>
                         </a>
 
