--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
     <div class="wrapper" id="cover">
 
         <!-- Cover -->
-        <section class="slide changeable content" id="header" style="background: #142a60">
+        <section class="slide changeable content" id="header" style="background: #0066cc">
             <div id="particles-js" style="position: absolute;"></div>
             <script src="js/particles.min.js"></script>
             <!--
