--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
                         <a class="navbar-brand js-navbar-link scrollLink navobject" href="#cover"
                            style="padding-top: 0; padding-bottom: 0; padding-right: 0; z-index: 9500">
                             <div id="nav-logo-group" style="height: 100%">
-                                <img height="100%" id="nav-logo" src="images/logo/logo-white.svg" width="auto">
+                                <img height="100%" id="nav-logo" src="images/logo/debate%20logo.png" width="auto">
                                 <span id="nav-logo-text" style="padding-left: 5px; font-family: 'Avenir Next Bold'">Massey Debate</span>
                             </div>
                         </a>
