--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
     <div class="wrapper" id="cover">
 
         <!-- Cover -->
-        <section class="slide changeable content" id="header" style="background: #0066cc">
+        <section class="slide changeable content" id="header" style="background: #0b78c8">
             <div id="particles-js" style="position: absolute;"></div>
             <script src="js/particles.min.js"></script>
             <!--
@@ -751,7 +751,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
     particlesJS("particles-js", {
         "particles": {
             "number": {
-                "value": 200,
+                "value": 14,
                 "density": {
                     "enable": true,
                     "value_area": 800
@@ -776,7 +776,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
                 }
             },
             "opacity": {
-                "value": 0.5,
+                "value": 0.13415536374845868,
                 "random": false,
                 "anim": {
                     "enable": false,
@@ -786,7 +786,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
                 }
             },
             "size": {
-                "value": 3,
+                "value": 98.64364981504316,
                 "random": true,
                 "anim": {
                     "enable": false,
@@ -821,12 +821,12 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
             "detect_on": "canvas",
             "events": {
                 "onhover": {
-                    "enable": true,
+                    "enable": false,
                     "mode": "repulse"
                 },
                 "onclick": {
                     "enable": true,
-                    "mode": "push"
+                    "mode": "repulse"
                 },
                 "resize": true
             },
