--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
                             consisting of 4 spontaneous debates. The winners and runner ups will receive an award, as
                             well as the Best Varsity Speaker and Best Novice Speaker. This is a fantastic opportunity
                             for debaters to sharpen their skills against other debaters in the Windsor-Essex region. The
-                            cost of Massey Invitationals is $10.00 per team and will cover the cost of breakfast,
+                            cost of Massey Invitationals is $10.00 per person and will cover the cost of breakfast,
                             lunch, and snacks throughout the event. </p>
                     </div>
                     <div class="col-md-7">
@@ -499,7 +499,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
             <div class="quote-block-inner">
                 <div style="height: 50%; width: 100%"></div>
                 <blockquote class="blockquote text-center">
-                    <p class="mb-0">Registration fee only $10.00 per team!</p>
+                    <p class="mb-0">Registration fee only $10.00 per person!</p>
                 </blockquote>
             </div>
         </section>
