--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
 
                         <p id="date-time">
                             May 18th, 2019 @ Vincent Massey S.S.
+                            Registration Closes May 4th, 2019
                         </p>
                         <br>
 
