--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
                         </p>
 
                         <p id="date-time">
-                            May 18th, 2019 @ Vincent Massey S.S.
+                            May 18th, 2019 @ Vincent Massey S.S.<br>
                             Registration Closes May 4th, 2019
                         </p>
                         <br>
