--- a/webroot/index.html
+++ b/webroot/index.html
@@ -497,7 +497,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
         <!--</div>-->
         <!--</section>-->
 
-        <section class="quote-block" style="background-image: url('webroot/images/slide/random.jpg');">
+        <section class="quote-block" style="background-image: url('images/slide/random.jpg');">
             <div class="quote-block-inner">
                 <div style="height: 50%; width: 100%"></div>
                 <blockquote class="blockquote text-center">
