--- a/webroot/index.html
+++ b/webroot/index.html
@@ -149,8 +149,8 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
                         </p>
                         <br>
 
-                        <a href="https://forms.gle/enZQTK2gXRGJc5xf9/">
-                            <button class="btn-white btn-large" type="button">Register</button>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeiFRyLe-4G7PH0Bzjm4lxCli2fo2UTgXpefq0YtZMswNLQ3A/viewform?vc=0&c=0&w=1">
+                            <button class="btn-white btn-large" type="button">Equity</button>
                         </a>
 
                         <!--
