--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
                         <!--<li><a class="js-navbar-link scrollLink navobject" href="#faq">Questions</a></li>-->
                         <!--<li><a href="#schedule" class="js-navbar-link scrollLink navobject">Schedule</a></li>-->
                         <li><a class="js-navbar-link scrollLink navobject" href="#sponsors">Sponsors</a></li>
+                        <li><a class="js-navbar-link scrollLink navobject" href="#team">Team</a></li>
                         <!--<li><a class="js-navbar-link scrollLink navobject" href="#sponsors">Sponsors</a></li>-->
 
 
@@ -124,6 +125,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
                     <li><a class="js-navbar-link scrollLink overlayLink" href="#about">About</a></li>
                     <!--<li><a class="js-navbar-link scrollLink overlayLink" href="#faq">Questions</a></li>-->
                     <li><a class="js-navbar-link scrollLink overlayLink" href="#sponsors">Sponsors</a></li>
+                    <li><a class="js-navbar-link scrollLink overlayLink" href="#team">Team</a></li>
                     <!--<li><a class="js-navbar-link scrollLink overlayLink" href="#sponsors">Sponsors</a></li>-->
 
                     <!--<li><a class="scrollLink overlayLink" href="live/index.html">Live</a></li>-->
@@ -170,6 +172,14 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
                 -->
             </div>
 
+
+            <div id="mouse"
+                 style="width: 100%; height: 100%; position: absolute; margin: auto; left: calc(50% - 18px) ; right: 0; bottom: 0; top: 160%;">
+                <div class="mousey">
+                    <div class="scroller"></div>
+                </div>
+            </div>
+
             <!--
             <div id="mouse" style="width: 100%; height: 100%; position: absolute; margin: auto; left: calc(50% - 18px) ; right: 0; bottom: 0; top: 160%;">
                 <div class="mousey">
@@ -188,11 +198,20 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
                     <h3 style="font-family: 'Avenir Next Bold'; text-align: center;">About Us</h3>
                     <br>
                     <p style="text-align: left;">
-                        We are a good team </p>
+                        The Cheesy Floofs were born out of a group of friends with a love for STEM. They all attended
+                        Vincent Massey Secondary School and were all taking similar courses. They heard of SPARC and
+                        decided to sign up, thus the Cheesy Floofs were born.
+                        <br>
+                        <br>
+                        This is the Cheesy Floofs first competitive season at SPARC, but we do have goals for expanding
+                        our team. Inclusivity is a main tenet of the Cheesy Floofs as such all students will be invited
+                        regardless of socioeconomic status or gender. We are a first year team at SPARC and we can use
+                        the excitement of being new to drive recruitment up and hopefully ride the wave into the future.
+                    </p>
                 </div>
                 <div class="col-md-7">
                     <div class="img-wrapper shadow" id="about-image">
-                        <img class="img-fluid scaleonhover" src="images/slide/23.jpg" style="width: 100%">
+                        <img class="img-fluid scaleonhover" src="images/robot.png" style="width: 100%">
                     </div>
                 </div>
             </div>
@@ -505,11 +524,77 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
             <a class="sponsor-obj" href="https://masseyhacks.ca/" target="_blank"><img class="zoom"
                                                                                        src="images/logo/logowide.svg"></a>
 
-            <a class="sponsor-obj" href="https://masseyhacks.ca/" target="_blank"><img class="zoom"
-                                                                                       src="images/sparc.png"></a>
+            <a class="sponsor-obj" href="https://www.youtube.com/watch?v=CQG3e75XiNg" target="_blank"><img class="zoom"
+                                                                                                           src="images/sparc.png"></a>
         </div>
 
     </section>
+
+    <section class="quote-block" style="background-image: url('images/goosebus.jpeg'); ">
+        <div class="quote-block-inner">
+            <div style="height: 50%; width: 100%"></div>
+            <blockquote class="blockquote text-center">
+                <p class="mb-0">"With the help of Mr. Goose, I finally discovered my inner engineer! <3"</p>
+                <footer class="blockquote-footer">Cheesy Floofs Alumnus</footer>
+            </blockquote>
+        </div>
+    </section>
+
+    <!-- Schedule -->
+    <section class="slide slide-free container-fluid changeable" id="team">
+
+
+        <h3>Team</h3>
+        <div class="row">
+            <div class="col-sm-4">
+
+
+                <img src="images/henry.jpg" style="width: 100%; height: auto; max-width: 200px; border-radius: 50%">
+
+                <br>
+                <br>
+
+                <p class="director">
+                    <b>
+                        Henry Tu
+                    </b><br>
+                    Programming and Engineering Lead
+                </p>
+            </div>
+
+            <div class="col-sm-4">
+
+                <img src="images/david.png" style="width: 100%; height: auto; max-width: 200px; border-radius: 50%">
+
+                <br>
+                <br>
+
+                <p class="director">
+                    <b>
+                        David Cheng
+                    </b><br>
+                    Mechanical Lead
+                </p>
+            </div>
+
+            <div class="col-sm-4">
+
+                <img src="images/jason.png" style="width: 100%; height: auto; max-width: 200px; border-radius: 50%">
+
+                <br>
+                <br>
+
+                <p class="director">
+                    <b>
+                        Jason Quan
+                    </b><br>
+                    Electrical Lead
+                </p>
+            </div>
+        </div>
+
+    </section>
+
 
     <!--<section class="quote-block" style="background-image: url('images/slide/10.jpg');">-->
     <!--<div class="quote-block-inner">-->
@@ -670,16 +755,16 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
 
                     <ul style="padding: 0; list-style-type: none">
                         <li class="overlay-social-object" style="margin-left: 0"><a
-                                href="mailto:team@masseydebate.com" target="_blank"><i
+                                href="mailto:hello@masseeyhacks.ca" target="_blank"><i
                                 aria-hidden="true" class="fa fa-envelope navsocial" style="font-size: 20px"></i></a>
                         </li>
-                        <li class="overlay-social-object"><a href="https://www.facebook.com/groups/916657408543141/"
+                        <li class="overlay-social-object"><a href="https://facebook.com/masseyhacks"
                                                              target="_blank"><i aria-hidden="true"
                                                                                 class="fab fa-facebook-f navsocial"
                                                                                 style="font-size: 20px"></i></a>
                         </li>
                         </li>
-                        <li class="overlay-social-object"><a href="https://www.instagram.com/vmssdebate/"
+                        <li class="overlay-social-object"><a href="https://www.instagram.com/masseyhacks/"
                                                              target="_blank"><i aria-hidden="true"
                                                                                 class="fab fa-instagram navsocial"
                                                                                 style="font-size: 20px"></i></a>
