--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Developed by: Henry Tu, Ryan Zhang, David Hui, James Xu
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" name="viewport"/>
-    <meta content="Cheesy Floofss" property="og:title"/>
+    <meta content="Cheesy Floofs" property="og:title"/>
     <!--<meta content="Windsor-Essex's fifth high-school hackathon–for students, by students." property="og:description"/>-->
     <!--<meta content="images/mhcover.png" property="og:image"/>-->
     <!--<meta content="MasseyHacks, V, MasseyHacks V, Windsor, Hacks, Massey, VMSS, Vincent, MLH, Learnathon, Hackathon, Computer, Science, Computer Science"-->
